11/19/2003  version 0.1.43  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the CustomFileFilter class that caused it to go into
      an infinite loop with files with no extension.

11/15/2003  version 0.1.42  Ian Lewis <IanLewis@member.fsf.org>

    * Changed the XMLDocument and DefaultXMLDocument classes to handle insertion
      and removal of raw text.
    * DefaultXMLDocument now stores text in a ContextManager object much like
      the way jEdit stores text. This should be more efficient and more scalable
      to large files than storing the raw text in String object.
    * Created a DocumentBuffer class to handle editor/application specific
      things like the underlying file on disk, the name of the buffer, whether
      it's dirty or not etc...
    * Documents can now be serialized/written to disk even if they are not
      well-formed (However, they still can't be opened).

11/11/2003  version 0.1.41  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed problem where the tree in the default view allowed you to select
      multiple nodes and cause undesired operation.

11/10/2003  version 0.1.40  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where the * dirty file indicator was going away when switching
      views.
    * Fixed a bug where a document was marked dirty when switching views.

10/30/2003  version 0.1.39  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for dirty files. When you make changes to a document
      it is marked dirty and has an '*' in the tab name. jsXe also asks you
      if you want to save if you have dirty documents open.
    * Fixed many miscellaneous bugs.
    * AdapterNodes notify the XMLDocument parent when changes are made to the
      DOM.

10/23/2003  version 0.1.38  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused an error message and undesired behavior when
      removing nodes.

10/23/2003  version 0.1.37  Ian Lewis <IanLewis@member.fsf.org>
